@@ -1,5 +1,10 @@
 2010-09-12  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/normal/misc.c (grub_normal_print_device_info): Show
+	partition size and offset.
+
+2010-09-12  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/commands/wildcard.c (make_regex): Escape brackets.
 
 2010-09-12  Vladimir Serbinenko  <phcoder@gmail.com>
